kafka-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: kafka-headless
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      tolerations:
      - key: "node-role.kubernetes.io/infra"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/worker
                operator: Exists
      containers:
      - name: kafka
        image: vendor/docker/bitnami/kafka:3.6.1-debian-11-r6
        ports:
        - containerPort: 9092
          name: plaintext
        - containerPort: 9093
          name: controller
        - containerPort: 9094
          name: ssl
        volumeMounts:
        - name: kafka-data
          mountPath: /bitnami/kafka
        - name: kafka-certificates
          mountPath: /opt/bitnami/kafka/config/certs
          readOnly: true
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
          limits:
            memory: "3Gi"
            cpu: "1"
      volumes:
      - name: kafka-certificates
        secret:
          secretName: kafka-certificates
          defaultMode: 0400
  volumeClaimTemplates:
  - metadata:
      name: kafka-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
