kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
  - port: 9092
    targetPort: 9092
    name: broker
  - port: 9093
    targetPort: 9093
    name: controller
  - port: 9094
    targetPort: 9094
    name: ssl
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  selector:
    app: kafka
  ports:
  - port: 9092
    targetPort: 9092
    name: broker
  - port: 9094
    targetPort: 9094
    name: ssl
